WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270547
IPCTestingAPI crash when creating JS object during garbage collection
https://bugs.webkit.org/show_bug.cgi?id=270547
Summary
IPCTestingAPI crash when creating JS object during garbage collection
Charlie Wolfe
Reported
2024-03-05 15:39:21 PST
Some objects may send IPC messages during destruction, which may cause a crash.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-05 15:40:28 PST
<
rdar://problem/124101628
>
Charlie Wolfe
Comment 2
2024-03-05 15:45:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25510
EWS
Comment 3
2024-03-06 10:40:02 PST
Committed
275745@main
(2e156b8a7010): <
https://commits.webkit.org/275745@main
> Reviewed commits have been landed. Closing PR #25510 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug