IPCTestingAPI crash when creating JS object during garbage collection https://bugs.webkit.org/show_bug.cgi?id=270547 rdar://124101628

Reviewed by Alex Christensen.

Some objects send IPC messages during destruction. We should dispatch the decoder to the main run loop
to avoid creating a JS object during garbage collection.

* Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp:
(WebKit::IPCTestingAPI::JSMessageListener::willSendMessage):

Canonical link: https://commits.webkit.org/275745@main